# lms

./: .env-example  .gitignore  COMPLETION_SUMMARY.md  DEPLOYMENT.md  ENDPOINTS_AND_TABLES.md  LICENSE  PROJECT_OVERVIEW.md  README.md  alembic.ini  check_smtp_access.py  database-schema.md  package-lock.json  pyproject.toml  pyrightconfig.json  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 001_add_audit_log_detail_columns.py  002_user_profiles_and_staff_roles.py  003_add_policy_is_deleted.py  004_drop_policy_document_columns.py
backend/: db.py  main.py
backend/models/: __init__.py  audit.py  balance.py  document.py  enums.py  holiday.py  job.py  leave.py  notification.py  policy.py  role.py  staff_role.py  user.py  user_profile.py
backend/routes/: auth.py  holidays.py  leaves.py  manager.py  policies.py  users.py
backend/services/: audit.py  balance_history.py  email.py  email_graph.py  scheduler.py  seed.py
backend/utils/: action_log.py  id_utils.py  leave_utils.py  logging_config.py  request_info.py  scopes.py  security.py
frontend/: next.config.ts  package-lock.json  package.json
scripts/: add_audit_log_columns.sql  add_password_reset_columns.py  check_user.py  create_tables.py  delete_duplicate.py  find_duplicates.py  recreate_audit_logs.sql  rename_audit_log_to_target.sql  reset_auto_increment.py  seed_admin.py  seed_roles.py  truncate_all_tables.py
src/: db.py  main.py
src/models/: job.py  leave.py  policy.py  user.py
src/routes/: auth.py  comp_off.py  holidays.py  leaves.py  policies.py  users.py
src/services/: email.py  (+1 more)
(+45 files in other folders)
